--- a/themes/cintiapub/layout/_partial/index.ejs
+++ b/themes/cintiapub/layout/_partial/index.ejs
@@ -39,7 +39,7 @@
         <li>
           <div class="category-image home-ux-design">
             <a href="/categories/ux" title="UX design">
-              <img src="https://farm1.staticflickr.com/695/22373809746_3947c530a6_h.jpg" itemprop="image">
+              <img src="https://farm3.staticflickr.com/2833/33279997185_f310d6b4f0_h.jpg" itemprop="image">
             </a>
             <div class="image-filter-background">
               <h2 class="top">UX design</h2>
@@ -76,7 +76,7 @@
           <i class="item-icon fa fa-arrows fa-2x" aria-hidden="true"></i>
           <div class="item-content">
               <ul>
-                  <li>I have been working with <b>Graphic Design</b> since 2010.</li>
+                  <li>I have been working with <b><a href="/graphic-design">Graphic Design</a></b> since 2010.</li>
                   <li>I started in a Internship as a Graphic Designer Instructor, then I got promoted and continued giving classes for 4 years. It was a great time of my life.</li>
                   <li>Later, I started working for agencies, companies, in freelancing projects and here I am, still loving my work and the design world.</li>
               </ul>
@@ -87,7 +87,7 @@
           <i class="item-icon fa fa-pencil fa-2x" aria-hidden="true"></i>
           <div class="item-content">
               <ul>
-                  <li>Yeah! I've just finished my <b>UX Design</b> certificate at General Assembly, and I'm so excited to start this new step on my life.</li>
+                  <li>Yeah! I've just finished my <b><a href="/categories/ux">UX Design</a></b> certificate at General Assembly, and I'm so excited to start this new step on my life.</li>
                   <li>I've built a few projects and I can't wait to create more, combining my visual design skills with focus on the user experience!</li>
               </ul>
           </div>
@@ -99,7 +99,7 @@
           <i class="item-icon fa fa-laptop fa-2x" aria-hidden="true"></i>
           <div class="item-content">
               <ul>
-                  <li>I learned <b>Web Design</b> at an Adobe certificated school (in Brazil), and I soon got employed in web agencies, working with websites, e-learning, social media and at freelancer gigs.</li>
+                  <li>I learned <b><a href="/web-design">Web Design</a></b> at an Adobe certificated school (in Brazil), and I soon got employed in web agencies, working with websites, e-learning, social media and at freelancer gigs.</li>
                   <li>I also designed my blog and my website.</li>
               </ul>
           </div>
@@ -109,7 +109,7 @@
           <i class="item-icon fa fa-scissors fa-2x" aria-hidden="true"></i>
           <div class="item-content">
               <ul>
-                  <li>Besides design, I'm a <b>Fashion</b> lover. I have an MBA in Creative Directon for Fashion, and I love to be a fashion designer and stylist in my spare time, just for fun!</li>
+                  <li>Besides design, I'm a <b><a href="/categories/illustrations">Fashion</a></b> lover. I have an MBA in Creative Directon for Fashion, and I love to be a fashion designer and stylist in my spare time, just for fun!</li>
                   <li>I'm crazy about fashion sketches.</li>
               </ul>
           </div>
