about page, half way done

--- a/themes/cintiapub/layout/_partial/index.ejs
+++ b/themes/cintiapub/layout/_partial/index.ejs
@@ -12,7 +12,7 @@
       </div>
     </div>
   
-    <div class="content active fields" id="by-type">
+    <section class="content active fields" id="by-type">
       <ul class="image-grid small-block-grid-2 medium-block-grid-4 large-block-grid-4 text-center">
         <li>
           <div class="category-image home-graphic-design">
@@ -58,9 +58,9 @@
           </div>
         </li>        
       </ul>
-    </div>
+    </section>
 
-    <div class="designing">
+    <section class="designing">
       <div class="row">
         <div class="large-2 medium-3 small-12 columns">
           <h3>designing with smile</h3>
@@ -115,12 +115,12 @@
           </div>
         </div>
       </div>    
-    </div>
+    </section>
 
   </div>
 </div>    
 
-<div class="collage">
+<section class="collage">
   <div class="row">
     <div class="medium-8 columns">
       <div class="row">
@@ -137,4 +137,4 @@
     <div class="medium-6 columns collage-5"><div class="center">Blogger | <a href="http://cintialand.com" target="_blank">cintialand.com</a></div></div>
     <div class="medium-6 columns collage-6"><div class="center">Restless thinker</div></div>
   </div>
-</div>
+</section>
