--- a/themes/cintiapub/layout/about.ejs
+++ b/themes/cintiapub/layout/about.ejs
@@ -1,8 +1,124 @@
-<div class="row">
-    <div class="large-8 large-centered medium-12 columns">
-		<p class="avatar">
-		    <%- image_tag(gravatar('cintiapub@gmail.com', 150), { class: 'avatar'}) %>
-		</p>
-		<%- page.content %>
+<section class="me">
+  <div class="row">
+    <div class="large-8 medium-8 small-12 columns">
+      <div class="breadcrumbs default box">
+        <h3>Hi,</h3>
+        <ul>
+          <li>I am a UX and Visual Designer for multiple devices and platforms with 7+ years of experience, based in San Francisco Bay Area.</li>
+          <li>Hiking, The Walking Dead and Speculoos cookie butter are just a few of my favorite things.</li>
+          <li>I completed Certificate Programs in User Experience Design at General Assembly in San Francisco, and in Visual Design at UC Berkeley Extension. Besides, I have a Bachelor's degree in Advertising and Marketing and a MBA in Creative Direction for Fashion, both in Brazil.</li>
+          <li>Be welcome to contact me. Let's share some ideas!</li>
+        </ul>
+      </div>
+    </div>
+    <div class="large-4 medium-4 small-12 columns avatar">
+      <%- image_tag(gravatar('cintiapub@gmail.com', 300)) %>
+    </div>
+  </div>
+</section>
+
+<section class="collage">
+  <div class="row">
+    <div class="large-4 medium-4 small-12 columns">
+      <div class="breadcrumbs default box">
+        <h3>In addition to her design genius, she is a excellent team player!</h3>
+        <ul>
+          <li>She created beautiful images for our social media accounts, redesigned our logo and created our style guidebook.</li>
+        </ul>
+        <div class="reviewer">Nicole Moreno‐Deinzer | Epifania Magazine</div>
+      </div>
+    </div>
+    <div class="large-4 medium-4 small-12 columns">
+      <div class="breadcrumbs default box">
+        <h3>Cintia would be an asset to any team!</h3>
+        <ul>
+          <li>Cintia and I worked together. She was a fantastic co-worker, very professional and enjoyable to work with. She has a natural flair for style and a great eye for detail.</li>
+        </ul>
+        <div class="reviewer">Jenny Spillane | Jeremy's</div>
+      </div>
+    </div>
+    <div class="large-4 medium-4 small-12 columns">
+      <div class="breadcrumbs default box">
+        <h3>Cintia is a very hard-working professional!</h3>
+        <ul>
+          <li>She is able to handle different subjects at the same time. She is roactive and competent person, always very curious and with huge desire of learning.</li>
+        </ul>
+        <div class="reviewer">Eduardo Eloi | Ta cas</div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="designing">
+  <div class="row">
+    <div class="large-2 medium-3 small-12 columns">
+      <h3>about me</h3>
+      <div class="breadcrumbs default box">
+        <ul>
+          <li>design is a journey of experience</li>
+        </ul>
+      </div>
+    </div>
+    <div class="large-5 medium-9 small-12 columns item">
+      <i class="item-icon fa fa-id-badge fa-2x" aria-hidden="true"></i>
+      <div class="item-content">
+	    <h3>Who am I</h3>
+        <ul>
+          <li>Brazilian native that loves living in California.</li>
+          <li>Animal and nature lover, a vegan girl.</li>
+          <li>Fascinated by the creative process of design.</li>
+        </ul>
+      </div>
+    </div>
+    <div class="large-5 large-offset-0 medium-9 small-12 columns item">
+      <i class="item-icon fa fa-heart fa-2x" aria-hidden="true"></i>
+      <div class="item-content">
+        <h3>How do I work</h3>
+		<ul>
+          <li>Driven by curiosity.</li>
+          <li>Deconstructing complex problems into solid solutions.</li>
+          <li>Getting involved with my team thoughtfully organizing data, researching and collecting feedback.</li>
+		</ul>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="large-5 large-offset-2 medium-9 medium-offset-3 small-12 columns item">
+      <i class="item-icon fa fa-diamond fa-2x" aria-hidden="true"></i>
+      <div class="item-content">
+        <h3>Skills</h3>
+		<ul>
+		  <li>UX/UI Design, Web Design, Graphic Design, Typography, Brand Development, Photo Editing, Video Editing, User Research, User Testing, Prototyping, Wireframing and Social Media.</li>
+		</ul>
+      </div>
+    </div>
+    <div class="large-5 large-offset-0 medium-9 medium-offset-3 small-12 columns item">
+      <i class="item-icon fa fa-globe fa-2x" aria-hidden="true"></i>
+      <div class="item-content">
+        <h3>Software</h3>
+		<ul>
+		  <li>Adobe Photoshop, Adobe Illustrator, Adobe InDesign, Adobe DreamWeaver, Adobe Premiere, Adobe XD, Adobe Spark, Sketch, Flinto, InVision, MS Office.</li>
+		</ul>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="large-5 large-offset-2 medium-9 medium-offset-3 small-12 columns item end">
+      <i class="item-icon fa fa-check-square fa-2x" aria-hidden="true"></i>
+      <div class="item-content">
+        <h3>Languages</h3>
+		<ul>
+		  <li>Portuguese, English, Spanish and French.</li>
+		</ul>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="small-12 columns see-more-button">
+	  <a href="https://www.linkedin.com/in/cintiaromero" class="button expanded">
+	  	<i class="fa fa-2x fa-linkedin-square"></i>
+		<span class="button-text">See more on LinkedIn</span>
+	  </a>		
 	</div>
-</div>
+  </div>
+</section>
