--- a/themes/cintiapub/layout/about.ejs
+++ b/themes/cintiapub/layout/about.ejs
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div class="large-4 medium-12 small-12 columns">
-      <div class="breadcrumbs illustrations box">
+      <div class="breadcrumbs intermediate box">
         <h3>Cintia would be an asset to any team!</h3>
         <ul>
           <li>Cintia and I worked together. She was a fantastic co-worker, very professional and enjoyable to work with. She has a natural flair for style and a great eye for detail.</li>
@@ -115,7 +115,7 @@
   </div>
   <div class="row">
     <div class="small-12 columns see-more-button">
-	  <a href="https://www.linkedin.com/in/cintiaromero" class="button expanded">
+	  <a href="https://www.linkedin.com/in/cintiaromero" class="button">
 	  	<i class="fa fa-2x fa-linkedin-square"></i>
 		<span class="button-text">See more on LinkedIn</span>
 	  </a>		
