--- a/themes/cintiapub/layout/about.ejs
+++ b/themes/cintiapub/layout/about.ejs
@@ -93,7 +93,7 @@
       </div>
     </div>
     <div class="large-5 large-offset-0 medium-9 medium-offset-3 small-12 columns item">
-      <i class="item-icon fa fa-globe fa-2x" aria-hidden="true"></i>
+      <i class="item-icon fa fa-cogs fa-2x" aria-hidden="true"></i>
       <div class="item-content">
         <h3>Software</h3>
 		<ul>
@@ -104,7 +104,7 @@
   </div>
   <div class="row">
     <div class="large-5 large-offset-2 medium-9 medium-offset-3 small-12 columns item end">
-      <i class="item-icon fa fa-check-square fa-2x" aria-hidden="true"></i>
+      <i class="item-icon fa fa-globe fa-2x" aria-hidden="true"></i>
       <div class="item-content">
         <h3>Languages</h3>
 		<ul>
