--- a/themes/cintiapub/layout/about.ejs
+++ b/themes/cintiapub/layout/about.ejs
@@ -41,7 +41,7 @@
       <div class="breadcrumbs web-design box">
         <h3>Cintia is a very hard-working professional!</h3>
         <ul>
-          <li>She is able to handle different subjects at the same time. She is roactive and competent person, always very curious and with huge desire of learning.</li>
+          <li>She is able to handle different subjects at the same time. She is proactive and competent person, always very curious and with huge desire of learning.</li>
         </ul>
         <div class="reviewer">Eduardo Eloi | Taticas</div>
       </div>
