updates from april

--- a/themes/cintiapub/layout/_partial/index.ejs
+++ b/themes/cintiapub/layout/_partial/index.ejs
@@ -4,8 +4,9 @@
     <div class="row">
       <div class="large-6 medium-6 columns">
         <div class="breadcrumbs default box">
-          <h3>Hello, welcome to my portfolio!</h3>
+          <h3>Sr. Visual Designer | UX Specialist</h3>
           <ul>
+              <li>Hello, welcome to my portfolio!</li>
               <li>I'm always excited to share, inspire and connect ideas to create something unique, and to ultimately make the end-user's life better. Let's share some ideas!</li>
           </ul>
         </div>
@@ -26,23 +27,23 @@
         </li>
 
         <li>
-          <div class="category-image home-web-design">
-            <a href="/web-design" title="Web design">
-              <img src="https://farm2.staticflickr.com/1713/25316011803_e57e0343d6_h.jpg" itemprop="image">
-            </a>
-            <div class="image-filter-background">
-              <h2 class="bottom">Web design</h2>
-            </div>
-          </div>
-        </li>
-
-        <li>
           <div class="category-image home-ux-design">
             <a href="/categories/ux" title="UX design">
               <img src="https://farm3.staticflickr.com/2833/33279997185_f310d6b4f0_h.jpg" itemprop="image">
             </a>
             <div class="image-filter-background">
-              <h2 class="top">UX design</h2>
+              <h2 class="bottom">UX design</h2>
+            </div>
+          </div>
+        </li>        
+
+        <li>
+          <div class="category-image home-web-design">
+            <a href="/web-design" title="Web design">
+              <img src="https://farm2.staticflickr.com/1713/25316011803_e57e0343d6_h.jpg" itemprop="image">
+            </a>
+            <div class="image-filter-background">
+              <h2 class="top">Web design</h2>
             </div>
           </div>
         </li>
@@ -66,29 +67,28 @@
           <h3>designing with smile</h3>
           <div class="breadcrumbs default box">
             <ul>
-                <li>Make it simple but significant.</li>
+                <li>"Make it simple but significant."</li>
             </ul>
             <div class="reviewer">Don Draper</div>
           </div>
         </div>
 
         <div class="large-5 medium-9 small-12 columns item">
-          <i class="item-icon fa fa-arrows fa-2x" aria-hidden="true"></i>
+          <i class="item-icon fa fa-pencil fa-2x" aria-hidden="true"></i>
           <div class="item-content">
               <ul>
-                  <li>I have been working with <b><a href="/graphic-design">Graphic Design</a></b> since 2010.</li>
-                  <li>I started in a Internship as a Graphic Designer Instructor, then I got promoted and continued giving classes for 4 years. It was a great time of my life.</li>
-                  <li>Later, I started working for agencies, companies, in freelancing projects and here I am, still loving my work and the design world.</li>
+                  <li>Yeah! I've just finished my <b><a href="/categories/ux">UX Design</a></b> course at General Assembly, and I'm so excited about starting this new step on my life.</li>
+                  <li>I've built a few projects already and I'm eager to create more, combining my visual design skills with focus on the user experience!</li>
               </ul>
           </div>
         </div>
 
         <div class="large-5 large-offset-0 medium-9 small-12 columns item">
-          <i class="item-icon fa fa-pencil fa-2x" aria-hidden="true"></i>
+          <i class="item-icon fa fa-arrows fa-2x" aria-hidden="true"></i>
           <div class="item-content">
               <ul>
-                  <li>Yeah! I've just finished my <b><a href="/categories/ux">UX Design</a></b> certificate at General Assembly, and I'm so excited to start this new step on my life.</li>
-                  <li>I've built a few projects and I can't wait to create more, combining my visual design skills with focus on the user experience!</li>
+                  <li>I have been working with <b><a href="/graphic-design">Graphic Design</a></b> since 2010.</li>
+                  <li>I started as an intern, and soon I was working for agencies, startups, in freelancing projects and here I am, still loving my work and the design world.</li>
               </ul>
           </div>
         </div>
@@ -99,7 +99,7 @@
           <i class="item-icon fa fa-laptop fa-2x" aria-hidden="true"></i>
           <div class="item-content">
               <ul>
-                  <li>I learned <b><a href="/web-design">Web Design</a></b> at an Adobe certificated school (in Brazil), and I soon got employed in web agencies, working with websites, e-learning, social media and at freelancer gigs.</li>
+                  <li>I learned <b><a href="/web-design">Web Design</a></b> at an Adobe certificated school, and I soon got employed in web agencies, working with websites, e-learning, social media and at freelancer gigs.</li>
                   <li>I also designed my blog and my website.</li>
               </ul>
           </div>
