--- a/themes/cintiapub/layout/about.ejs
+++ b/themes/cintiapub/layout/about.ejs
@@ -4,7 +4,7 @@
       <div class="breadcrumbs default box">
         <h3>Hi,</h3>
         <ul>
-          <li>I am a UX and Visual Designer for multiple devices and platforms with 7+ years of experience, based in San Francisco Bay Area.</li>
+          <li>I am a UX and Visual Designer for multiple devices and platforms with 8+ years of experience, based in San Francisco Bay Area.</li>
           <li>Hiking, The Walking Dead and Speculoos cookie butter are just a few of my favorite things.</li>
           <li>I completed Certificate Programs in User Experience Design at General Assembly in San Francisco, and in Visual Design at UC Berkeley Extension. Besides, I have a Bachelor's degree in Advertising and Marketing and a MBA in Creative Direction for Fashion, both in Brazil.</li>
           <li>Be welcome to <a href="/contact">contact me</a>. Let's share some ideas!</li>
@@ -23,7 +23,7 @@
       <div class="breadcrumbs ux box">
         <h3>In addition to her design genius, she is an excellent team player!</h3>
         <ul>
-          <li>She created beautiful images for our social media accounts, redesigned our logo and created our style guidebook.</li>
+          <li>"She created beautiful images for our social media accounts, redesigned our logo and created our style guidebook."</li>
         </ul>
         <div class="reviewer">Nicole Moreno‐Deinzer | Epifania Magazine</div>
       </div>
@@ -32,7 +32,7 @@
       <div class="breadcrumbs intermediate box">
         <h3>Cintia would be an asset to any team!</h3>
         <ul>
-          <li>Cintia and I worked together. She was a fantastic co-worker, very professional and enjoyable to work with. She has a natural flair for style and a great eye for detail.</li>
+          <li>"Cintia and I worked together. She was a fantastic co-worker, very professional and enjoyable to work with. She has a natural flair for style and a great eye for detail."</li>
         </ul>
         <div class="reviewer">Jenny Spillane | Jeremy's</div>
       </div>
@@ -41,7 +41,7 @@
       <div class="breadcrumbs web-design box">
         <h3>Cintia is a very hard-working professional!</h3>
         <ul>
-          <li>She is able to handle different subjects at the same time. She is proactive and competent person, always very curious and with huge desire of learning.</li>
+          <li>"She is able to handle different subjects at the same time. She is proactive and competent person, always very curious and with huge desire of learning."</li>
         </ul>
         <div class="reviewer">Eduardo Eloi | Taticas</div>
       </div>
