fixes for the logo that does not have a calculator to add

--- a/themes/cintiapub/layout/web-design.ejs
+++ b/themes/cintiapub/layout/web-design.ejs
@@ -27,6 +27,17 @@
             </div>
           </li>
 
+          <li>
+            <div class="category-image subcat-web-design">
+              <a href="/categories/banners" title="Banners">
+                <img src="https://farm5.staticflickr.com/4351/36682841572_a2853bce63_h.jpg" itemprop="image">
+              </a>
+              <div class="image-filter-background">
+                <h2 class="middle">Banners</h2>
+              </div>
+            </div>
+          </li>
+
         </ul>
       </div>      
 
