--- a/themes/cintiapub/layout/_partial/index.ejs
+++ b/themes/cintiapub/layout/_partial/index.ejs
@@ -4,15 +4,16 @@
     <div class="row">
       <div class="large-6 medium-6 columns">
         <div class="breadcrumbs default box">
-          <h3>Sr. Visual Designer | UX Specialist</h3>
+          <h3>UX / Visual Designer</h3>
           <ul>
-              <li>Hello, welcome to my portfolio!</li>
-              <li>I'm always excited to share, inspire and connect ideas to create something unique, and to ultimately make the end-user's life better. Let's share some ideas!</li>
+            <li>Hello, welcome to my portfolio!</li>
+            <li>I'm always excited to share, inspire and connect ideas to create something unique, and to ultimately make the
+              end-user's life better. Let's share some ideas!</li>
           </ul>
         </div>
       </div>
     </div>
-  
+
     <section class="content active fields" id="by-type">
       <ul class="image-grid small-block-grid-2 medium-block-grid-4 large-block-grid-4 text-center">
         <li>
@@ -35,7 +36,7 @@
               <h2 class="bottom">UX design</h2>
             </div>
           </div>
-        </li>        
+        </li>
 
         <li>
           <div class="category-image home-web-design">
@@ -57,7 +58,7 @@
               <h2 class="bottom">Illustrations</h2>
             </div>
           </div>
-        </li>        
+        </li>
       </ul>
     </section>
 
@@ -67,7 +68,7 @@
           <h3>designing with smile</h3>
           <div class="breadcrumbs default box">
             <ul>
-                <li>"Make it simple but significant."</li>
+              <li>"Make it simple but significant."</li>
             </ul>
             <div class="reviewer">Don Draper</div>
           </div>
@@ -76,65 +77,96 @@
         <div class="large-5 medium-9 small-12 columns item">
           <i class="item-icon fa fa-pencil fa-2x" aria-hidden="true"></i>
           <div class="item-content">
-              <ul>
-                  <li>Yeah! I've just finished my <b><a href="/categories/ux">UX Design</a></b> course at General Assembly, and I'm so excited about starting this new step on my life.</li>
-                  <li>I've built a few projects already and I'm eager to create more, combining my visual design skills with focus on the user experience!</li>
-              </ul>
+            <ul>
+              <li>Yeah! I'm working with
+                <b>
+                  <a href="/categories/ux">UX Design</a>
+                </b> for 1+ year and I love helping my users to get their best experience when interacting with my product.</li>
+              <li>I've built a few cool projects already and I'm eager to create more, combining my visual design skills with
+                focus on user experience!
+              </li>
+            </ul>
           </div>
         </div>
 
         <div class="large-5 large-offset-0 medium-9 small-12 columns item">
           <i class="item-icon fa fa-arrows fa-2x" aria-hidden="true"></i>
           <div class="item-content">
-              <ul>
-                  <li>I have been working with <b><a href="/graphic-design">Graphic Design</a></b> since 2010.</li>
-                  <li>I started as an intern, and soon I was working for agencies, startups, in freelancing projects and here I am, still loving my work and the design world.</li>
-              </ul>
+            <ul>
+              <li>I have been working with
+                <b>
+                  <a href="/graphic-design">Graphic Design</a>
+                </b> since 2010.</li>
+              <li>I started as an intern, and soon I was working for agencies, startups, in freelancing projects and here I am,
+                still loving my work and the design world.</li>
+            </ul>
           </div>
         </div>
       </div>
 
-      <div class="row">      
+      <div class="row">
         <div class="large-5 large-offset-2 medium-9 medium-offset-3 small-12 columns item">
           <i class="item-icon fa fa-laptop fa-2x" aria-hidden="true"></i>
           <div class="item-content">
-              <ul>
-                  <li>I learned <b><a href="/web-design">Web Design</a></b> at an Adobe certificated school, and I soon got employed in web agencies, working with websites, e-learning, social media and at freelancer gigs.</li>
-                  <li>I also designed my blog and my website.</li>
-              </ul>
+            <ul>
+              <li>I learned
+                <b>
+                  <a href="/web-design">Web Design</a>
+                </b> at an Adobe certificated school, and I soon got employed in web agencies, working with websites, e-learning,
+                social media and at freelancer gigs.</li>
+              <li>I also designed my blog and my website.</li>
+            </ul>
           </div>
         </div>
 
         <div class="large-5 large-offset-0 medium-9 medium-offset-3 small-12 columns item last-item">
           <i class="item-icon fa fa-scissors fa-2x" aria-hidden="true"></i>
           <div class="item-content">
-              <ul>
-                  <li>Besides design, I'm a <b><a href="/categories/illustrations">Fashion</a></b> lover. I have an MBA in Creative Directon for Fashion, and I love to be a fashion designer and stylist in my spare time, just for fun!</li>
-                  <li>I'm crazy about fashion sketches.</li>
-              </ul>
+            <ul>
+              <li>Besides design, I'm a
+                <b>
+                  <a href="/categories/illustrations">Fashion</a>
+                </b> lover. I have an MBA in Creative Directon for Fashion, and I love to be a fashion designer and stylist in
+                my spare time, just for fun!</li>
+              <li>I'm crazy about fashion sketches.</li>
+            </ul>
           </div>
         </div>
-      </div>    
+      </div>
     </section>
 
   </div>
-</div>    
+</div>
 
 <section class="collage">
   <div class="row">
     <div class="medium-8 columns">
       <div class="row">
-        <div class="medium-12 columns collage-1"><div class="center">Fascinated by the creative process of design</div></div>
+        <div class="medium-12 columns collage-1">
+          <div class="center">Fascinated by the creative process of design</div>
+        </div>
       </div>
       <div class="row">
-        <div class="medium-6 columns collage-3"><div class="center">Driven by curiosity</div></div>
-        <div class="medium-6 columns collage-4"><div class="center">Deconstructing complex problems into solid solutions</div></div>
+        <div class="medium-6 columns collage-3">
+          <div class="center">Driven by curiosity</div>
+        </div>
+        <div class="medium-6 columns collage-4">
+          <div class="center">Deconstructing complex problems into solid solutions</div>
+        </div>
       </div>
     </div>
-    <div class="medium-4 columns collage-2"><div class="center">Brazilian native that loves living in California</div></div>
+    <div class="medium-4 columns collage-2">
+      <div class="center">Brazilian native that loves living in California</div>
+    </div>
   </div>
   <div class="row">
-    <div class="medium-6 columns collage-5"><div class="center">Blogger | <a href="http://cintialand.com" target="_blank">cintialand.com</a></div></div>
-    <div class="medium-6 columns collage-6"><div class="center">Restless thinker</div></div>
+    <div class="medium-6 columns collage-5">
+      <div class="center">Blogger |
+        <a href="http://cintialand.com" target="_blank">cintialand.com</a>
+      </div>
+    </div>
+    <div class="medium-6 columns collage-6">
+      <div class="center">Restless thinker</div>
+    </div>
   </div>
 </section>
